# nav-2026

./: .gitignore  CMakeLists.txt  README.md  SLAM问题分析.md  base_drive.sh  package.xml  start_finav.sh
FREE_CH_02.3.01.001_ROS2/: H1E0-06B_第四章设备连接.md
FREE_CH_02.3.01.001_ROS2/FREE_CH_02.3.01.001/: CMakeLists.txt  package.xml  readme.md
FREE_CH_02.3.01.001_ROS2/FREE_CH_02.3.01.001/include/free_lidar/: c2_uart_driver.h  free_eth_driver.h  free_lidar_node.h  lidar_driver.h  lidar_struct.h  trailing_filter.h
FREE_CH_02.3.01.001_ROS2/FREE_CH_02.3.01.001/launch/: free_db_lidar_launch.py  free_lidar_launch.py
FREE_CH_02.3.01.001_ROS2/FREE_CH_02.3.01.001/rviz/: free_lidar.rviz
FREE_CH_02.3.01.001_ROS2/FREE_CH_02.3.01.001/src/driver/: c2_uart_driver.cpp  free_eth_driver.cpp  trailing_filter.cpp
FREE_CH_02.3.01.001_ROS2/FREE_CH_02.3.01.001/src/rosnode/: free_lidar_node.cpp
config/: base_control.yaml  ekf.yaml  fastdds_profiles.xml  imu.yaml  lidar.yaml  nav.yaml  path_plan.yaml  slam_toolbox_map.yaml  slam_toolbox_nav.yaml
launch/: map.launch.py  nav.launch.py  path_plan_sim.launch.py
launch/sub/: dm_imu.launch.py  ekf.launch.py  lidar.launch.py  r2.launch.py  robot_model.launch.py  rviz.launch.py  slam_toolbox.launch.py
r2000/include/: r2000_driver.h
r2000/src/: http_command_interface.cpp  r2000_driver.cpp  r2000_node.cpp  r2000_node.h  scan_data_receiver.h
rviz/: mapping.rviz  navigation.rviz
scripts/control/: base_control.py  joystick_control.py  js_kb_router.py  nav_control.py  path_plan.py
scripts/control/nav/: nav_control.py  path_plan.py
scripts/general/: js_kb_router.py
scripts/imu/: __init__.py  config_dm_imu.py  dm_imu_node.py  dm_imu_publisher.py  imu_config.py
scripts/imu/dm_imu_modules/: node.py
scripts/imu/dm_imu_modules/modules/: dm_serial.py
scripts/lidar/: scan_angle_filter.py
scripts/map/: manual_save_map.py  map_control_listener.py
scripts/tool/: TF.sh  clean_map.sh  clean_nav.sh  joystick_monitor.py  save_map.sh
server/: map_utils.py  process_manager.py  ros_bridge.py  run_server.py  server_app.py  state_store.py
server/web/: app-core.js  app-dock.js  app-pages.js  app.js  index.html  styles.css
sim/: README.md
sim/config/: sim_fake_pose.yaml  sim_plan_visualizer.yaml
sim/gazebo/: README.md
sim/gazebo/models/whillcar/: model.config  model.sdf
sim/gazebo/worlds/: office_corridor_sketch.world
sim/launch/: map_sim.launch.py  nav_sim.launch.py  path_plan_sim.launch.py
sim/rviz/: path_plan_sim.rviz
sim/scripts/: gz_topic_adapter.py  sim_chassis_sensor_pub.py  sim_fake_pose_tf.py  sim_gazebo_drive.py  sim_plan_visualizer.py  sim_send_goal.py
urdf/: whillcar.urdf
