<?xml version="1.0"?>
<package format="3">
  <name>finav</name>
  <version>0.2.0</version>
  <description>Professional navigation system with SLAM Toolbox, Nav2, and DM-IMU support</description>
  <maintainer email="denis.dillenberger@gmail.com">Denis Dillenberger</maintainer>
  <author email="denis.dillenberger@gmail.com">Denis Dillenberger</author>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/pepperl_fuchs_r2000</url>
  <url type="repository">https://github.com/dillenberger/pepperl_fuchs</url>
  <url type="bugtracker">https://github.com/dillenberger/pepperl_fuchs/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>

  <!-- Navigation2 dependencies -->
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <!-- SLAM Toolbox for mapping and localization -->
  <exec_depend>slam_toolbox</exec_depend>

  <!-- Robot localization for sensor fusion -->
  <exec_depend>robot_localization</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>

