<?xml version="1.0"?>
<package format="3">
  <name>finav</name>
  <version>0.2.0</version>
  <description>Professional navigation system with SLAM Toolbox, DM-IMU, and FREE lidar support</description>
  <maintainer email="denis.dillenberger@gmail.com">Denis Dillenberger</maintainer>
  <author email="denis.dillenberger@gmail.com">Denis Dillenberger</author>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclpy</depend>
  <depend>lifecycle_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>

  <!-- Navigation2 dependencies -->
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>

  <!-- SLAM Toolbox for mapping and localization -->
  <exec_depend>slam_toolbox</exec_depend>

  <!-- Robot localization for sensor fusion -->
  <exec_depend>robot_localization</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
